# BumpAllocator

./: .gitignore  CMakeLists.txt  README.md
include/: BumpAllocator.hpp  Logger.hpp  MemoryPool.hpp  ThreadSafeAllocator.hpp
src/: logger.cpp  main.cpp
